# STEM-BIO-AI

./: .env.example  .gitattributes  .gitignore  .slopconfig.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SKILL.md  app.py  mica_invoke.bat  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  python-package.yml  validate-scripts.yml  validate-skill.yml  validate-templates.yml
audits/: README.md
audits/benchmark-v1.3/: README.md  benchmark_manifest.template.json  benchmark_results.template.jsonl  false_positive_false_negative_log.template.md  slop_report_v132.json  tier_alignment_summary.template.md
audits/benchmark-v1.4/: README.md
audits/bio-detector-benchmark-5repo/: AI-Scientist_bio_detectors.json  BioClaw_bio_detectors.json  Biomni_bio_detectors.json  summary.json  (+3 more)
audits/bio-detector-benchmark-5repo-final/: summary.json  summary.md
audits/bio-detector-benchmark-5repo-rerun/: summary.json  summary.md
discrimination/: B3_COI_guide.md  CA_severity_examples.md  G1-G5_examples.md  H1-H6_examples.md  T2_examples.md
docs/: ADVISORY_RUNTIME.md  ADVISORY_SECRET_HANDLING.md  AIRISK_USABILITY_DIAGNOSIS_20260512.md  AIRI_DATA_GOVERNANCE.md  API_CONTRACT.md  API_CONTRACT_V1_5_DRAFT.md  ARCHITECTURE.md  CALIBRATION_PROFILE_DESIGN.md  CLI_REFERENCE.md  DETERMINISTIC_DIAGNOSTICS.md  DETERMINISTIC_DIAGNOSTICS_PROPOSAL.md  EXAMPLE_AUDITS.md  INSPECTION_REPORT_20260511.md  MICA_MEMORY.md  PREPRINT_DRAFT.md  REGULATORY_MAPPING.md  SCORING_RATIONALE.md  THIRD_PARTY_DATA.md  UI_HTML_REPORT.md  V1_3_PLAN_V1.md  V1_3_PLAN_V2.md  V1_3_REASONING_MODEL_CANDIDATES.md  V1_4_PLAN_V1.md  airi_detector_mapping.schema.json  airi_registry.schema.json  regulatory_basis_registry.schema.json  regulatory_basis_registry.v1.json
memory/: mica.yaml  stem-ai-lessons.v1.1.2.md  stem-ai-lessons.v1.5.0.md  stem-ai-lessons.v1.5.1.md  stem-ai-lessons.v1.5.10.md  stem-ai-lessons.v1.5.11.md  stem-ai-lessons.v1.5.2.md  stem-ai-lessons.v1.5.3.md  stem-ai-lessons.v1.5.6.md  stem-ai-lessons.v1.5.7.md  stem-ai-lessons.v1.5.8.md  stem-ai-lessons.v1.5.9.md  stem-ai-lessons.v1.6.0.md  stem-ai-lessons.v1.6.1.md  stem-ai-lessons.v1.6.2.md  stem-ai-lessons.v1.6.3.md  stem-ai-lessons.v1.6.4.md  stem-ai-lessons.v1.6.5.md  stem-ai-lessons.v1.6.6.md  stem-ai-lessons.v1.6.7.md  stem-ai-lessons.v1.6.8.md  stem-ai-lessons.v1.7.1.md  stem-ai-lessons.v1.7.2.md  stem-ai-lessons.v1.7.3.md  stem-ai-lessons.v1.7.4.md  stem-ai-lessons.v1.7.5.md  stem-ai-lessons.v1.7.6.md  stem-ai-lessons.v1.7.7.md  stem-ai-lessons.v1.7.8.md  stem-ai-lessons.v1.8.0.md  stem-ai-lessons.v1.8.1.md  stem-ai-lessons.v1.8.2.md  stem-ai-lessons.v1.8.3.md  stem-ai-lessons.v1.8.4.md  stem-ai-playbook.v1.1.2.md  stem-ai-playbook.v1.5.0.md  stem-ai-playbook.v1.5.1.md  stem-ai-playbook.v1.5.10.md  stem-ai-playbook.v1.5.11.md  stem-ai-playbook.v1.5.2.md  (+60 more)
policy/: scoring_profile.default.v1.json  scoring_profile.schema.json  scoring_profile.strict_clinical_adjacency.v1.json
references/: M15 General Principles for Model-Informed Drug Development.md  clinical_adjacent_triggers.md  risk_taxonomy.md  tier_decision_table.md
scripts/: benchmark_local10_ca_fp_impact.py  benchmark_local10_stage1_impact.py  benchmark_local10_stage2r_impact.py  benchmark_local10_stage3_3tier_impact.py  build_stdlib_package.py  ca_detection_scan.sh  local_analysis_scan.sh  provider_packet_benchmark.py  snapshot_provenance.sh  validate_release.ps1  validate_skill_structure.sh  validate_v1_3_0.ps1
spec/: CONSISTENCY_PROTOCOL.md  STEM-AI_v1.1.1_CORE.md  STEM-AI_v1.1.2_CORE.md  STYLE_GUIDE.md
stem_ai/: __init__.py  advisory_adapters.py  advisory_contract.py  advisory_providers.py  advisory_response.py  advisory_runtime.py  airi_risk_mapping.py  app.py  calibration_profile.py  cli.py  detector_ast.py  detector_bio.py  detector_contract.py  detector_stage4.py  detector_surface.py  detector_utils.py  detectors.py  evidence.py  patterns.py  policy_intent.py  provider_benchmark.py  reasoning_model.py  redaction.py  regulatory_traceability.py  render.py  render_html.py  render_html_components.py  render_html_styles.py  scanner.py
templates/: audit_report.md  claim_matrix.md  document_control.md  errata_log.md  evidence_ledger.md  executive_summary.md  method_appendix.md
tests/: helpers.py  test_airi_render_surfaces.py  test_bio_detectors.py  test_mica_invocation.py  test_scanner_regressions.py
tools/: mica_invoke.py  mica_pct.py  mica_runtime.py  update_regulatory_registry.py
(+135 files in other folders)
