[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-ai"
version = "1.5.8"
description = "STEM BIO-AI deterministic evidence-surface scanner for bio/medical AI repositories"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Flamehaven" }
]
dependencies = []

[project.optional-dependencies]
pdf  = ["reportlab>=4.0"]
demo = ["gradio>=5.0,<6", "reportlab>=4.0"]  # HF Space uses requirements.txt pin 5.29.0

[project.scripts]
stem = "stem_ai.cli:main"

[project.urls]
Homepage = "https://github.com/flamehaven01/STEM-BIO-AI"
Issues = "https://github.com/flamehaven01/STEM-BIO-AI/issues"

[tool.setuptools.packages.find]
include = ["stem_ai*"]

[tool.setuptools.data-files]
"." = ["SKILL.md", "CHANGELOG.md", "CONTRIBUTING.md", "LICENSE", "README.md"]
"docs" = [
  "docs/API_CONTRACT.md",
  "docs/MICA_MEMORY.md",
  "docs/SCORING_RATIONALE.md",
]
"memory" = [
  "memory/mica.yaml",
  "memory/stem-ai.mica.v1.5.8.json",
  "memory/stem-ai-playbook.v1.5.8.md",
  "memory/stem-ai-lessons.v1.5.8.md",
]
