[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-ai"
version = "1.7.1"
description = "STEM BIO-AI deterministic evidence-surface scanner for bio/medical AI repositories"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Flamehaven" }
]
dependencies = []

[project.optional-dependencies]
bio  = ["rdkit>=2023.3"]
pdf  = ["reportlab>=4.0"]
demo = ["gradio>=5.0,<6", "reportlab>=4.0"]  # HF Space uses requirements.txt pin 5.29.0

[project.scripts]
stem = "stem_ai.cli:main"

[project.urls]
Homepage = "https://github.com/flamehaven01/STEM-BIO-AI"
Issues = "https://github.com/flamehaven01/STEM-BIO-AI/issues"

[tool.setuptools.packages.find]
include = ["stem_ai*"]

[tool.setuptools.package-data]
"stem_ai" = ["data/*.json"]

[tool.setuptools.data-files]
"." = [".env.example", "SKILL.md", "CHANGELOG.md", "CONTRIBUTING.md", "LICENSE", "README.md", "CITATION.cff", ".zenodo.json"]
"docs" = [
  "docs/CLI_REFERENCE.md",
  "docs/ADVISORY_SECRET_HANDLING.md",
  "docs/ADVISORY_RUNTIME.md",
  "docs/AIRI_DATA_GOVERNANCE.md",
  "docs/API_CONTRACT.md",
  "docs/CALIBRATION_PROFILE_DESIGN.md",
  "docs/DETERMINISTIC_DIAGNOSTICS.md",
  "docs/EXAMPLE_AUDITS.md",
  "docs/MICA_MEMORY.md",
  "docs/REGULATORY_MAPPING.md",
  "docs/SCORING_RATIONALE.md",
  "docs/THIRD_PARTY_DATA.md",
  "docs/UI_HTML_REPORT.md",
  "docs/airi_detector_mapping.schema.json",
  "docs/airi_registry.schema.json",
  "docs/regulatory_basis_registry.schema.json",
  "docs/regulatory_basis_registry.v1.json",
]
"policy" = [
  "policy/scoring_profile.schema.json",
  "policy/scoring_profile.default.v1.json",
  "policy/scoring_profile.strict_clinical_adjacency.v1.json",
]
"memory" = [
  "memory/mica.yaml",
  "memory/stem-ai.mica.v1.7.1.json",
  "memory/stem-ai-playbook.v1.7.1.md",
  "memory/stem-ai-lessons.v1.7.1.md",
]
